# ai-driven-crop-disease-prediction-and-management-system

./: .bandit  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  USER_MANUAL.md  cliff.toml  pyproject.toml  pytest.ini  runner-test.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.specify/: constitution.md
.specify/memory/: constitution.md
.specify/specs/: 001-image-based-disease-detection.md  002-disease-management-recommendations.md  003-hybrid-ai-provider-architecture.md
.specify/templates/: plan-template.md  progress-template.md  spec-template.md  tasks-template.md
crop_disease_ai/: .env.example  .gitignore  Dockerfile  README.md  _audit_classes.py  app.py  app_stderr.txt  app_stdout.txt  requirements-ci.txt  requirements.txt  run_stdout.txt  stderr.txt  streamlit_err.txt  streamlit_out.txt
crop_disease_ai/agents/: __init__.py  disease_agent.py  memory_agent.py  treatment_agent.py  weather_agent.py
crop_disease_ai/ai/: __init__.py  cloud_provider.py  local_provider.py  model_router.py  provider_manager.py  settings.py
crop_disease_ai/assets/: style.css
crop_disease_ai/database/: db_manager.py
crop_disease_ai/i18n/: en.json  hi.json  te.json
crop_disease_ai/memory/: __init__.py  conversation_history.py  farmer_memory.py
crop_disease_ai/models/: class_indices.npy  plant_disease_model.h5
crop_disease_ai/pages/: 1_Home.py  2_Detection.py  3_Analytics.py  4_Knowledge_Base.py  5_Weather.py  6_History.py  7_About.py  8_AI_Assistant.py
crop_disease_ai/templates/: disease_knowledge_base.html
crop_disease_ai/tests/: run_all.py  test_ai_provider_manager.py  test_ai_provider_router.py  test_config.py  test_db_manager.py  test_disease_knowledge_base.py  test_image_processor.py  test_model_init.py  test_severity_analyzer.py
crop_disease_ai/tools/: __init__.py  disease_tool.py  memory_tool.py  treatment_tool.py  weather_tool.py
crop_disease_ai/training/: evaluate_model.py  train_model.py
crop_disease_ai/utils/: ai_features.py  config.py  disease_knowledge_base.py  explainable_ai.py  image_processor.py  model_handler.py  pdf_generator.py  recommendation_engine.py  risk_predictor.py  severity_analyzer.py  translator.py  weather_api.py
docs/: ai-provider-architecture.md
specs/user-authentication/: plan.md  spec.md  tasks.md
