[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crop-disease-api"
version = "0.1.0"
description = "AI-Driven Crop Disease Prediction and Management System"
readme = "README.md"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Project Team", email = "team@example.com"},
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.6",
    "pillow>=10.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "sendgrid>=6.10.0",
    "prometheus-client>=0.17.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "bandit>=1.7.5",
    "vulture>=2.10",
    "pylint>=3.0.0",
    "flake8>=6.1.0",
    "flake8-bugbear>=23.9.0",
    "semgrep>=1.50.0",
    "pyupgrade>=3.3.0",
    "pre-commit>=3.4.0",
    "types-redis>=4.6.0",
    "types-python-dotenv>=1.0.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tensorboard>=2.14.0",
    "mlflow>=2.8.0",
]

[project.scripts]
crop-disease-api = "src.api.main:run"

[tool.setuptools.packages.find]
where = ["crop_disease_ai"]

[tool.setuptools.package-data]
"src" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.coverage.run]
source = ["crop_disease_ai"]
omit = ["*/__main__.py", "*/migrations/*"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
    "@(abc\\.abstractmethod|typing\\.overload)",
]

[tool.vulture]
paths = ["src", "tests"]
min_confidence = 80
exclude = ["*/__pycache__/*", "*/migrations/*"]
ignore_decorators = ["@app.route", "@router.get", "@router.post", "@router.put", "@router.delete", "@router.patch", "@pytest.fixture"]
ignore_names = ["test_*"]
make_whitelist = false
sort_by_size = false

[tool.pylint.messages_control]
max-line-length = 100
disable = ["C0330", "C0326", "C0103"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "x", "y", "z", "db", "id", "e", "ex", "cls", "_"]
variable-rgx = "[a-z_][a-z0-9_]*$"
function-rgx = "[a-z_][a-z0-9_]*$"
method-rgx = "[a-z_][a-z0-9_]*$"
attr-rgx = "[a-z_][a-z0-9_]*$"
argument-rgx = "[a-z_][a-z0-9_]*$"

[tool.pylint.design]
max-args = 8
max-attributes = 15
max-branches = 12
max-locals = 20
max-returns = 6
max-statements = 50

[tool.flake8]
max-line-length = 100
extend-ignore = ["E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "*/migrations/*",
]
per-file-ignores = [
    "tests/*:S101",
]

[tool.pyupgrade]
keep_runtime_typing = true
py311-plus = true

[tool.semgrep]
config = "p/security-audit"
tests = "tests/"
