[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crop-disease-ai"
version = "1.0.0"
description = "AI-Driven Crop Disease Prediction and Management System"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Team", email = "team@example.com" }
]

dependencies = [
    "streamlit>=1.58.0",
    "tensorflow>=2.15.0",
    "opencv-python-headless>=4.8.1",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "matplotlib>=3.9.2",
    "plotly>=6.0.0",
    "Pillow>=10.4.0",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "reportlab>=4.2.2",
    "protobuf>=4.25.3",
    "h5py>=3.11.0",
    "httpx>=0.28.1",
    "cryptography>=42.0.0"
]

[project.optional-dependencies]
lint = [
    "ruff>=0.8.0"
]

typecheck = [
    "mypy>=1.10"
]

sec = [
    "bandit>=1.7.0",
    "pip-audit>=2.7.0"
]

test = [
    "pytest>=8.0",
    "pytest-cov>=5.0"
]

dev = [
    "crop-disease-ai[lint,typecheck,sec,test]"
]

[tool.setuptools.packages.find]
include = ["crop_disease_ai*"]

[tool.pytest.ini_options]
testpaths = ["crop_disease_ai/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
-v
--tb=short
--cov=crop_disease_ai/ai
--cov-report=term-missing
--cov-report=html
--cov-fail-under=80
"""
markers = [
    "slow",
    "integration",
    "unit"
]

[tool.coverage.run]
source = ["crop_disease_ai/ai"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "crop_disease_ai/ai/cloud_provider.py",
    "crop_disease_ai/ai/local_provider.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501", "N999"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
skips = ["B101", "B110", "B311"]
exclude_dirs = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
warn_unused_configs = true
exclude = ["tests/"]